chinh sua cac loi cho web

--- a/Tiki.vn/Home/HTML/index.html
+++ b/Tiki.vn/Home/HTML/index.html
@@ -6,8 +6,9 @@
     <title>Tiki - Mua hàng online giá tốt, hàng chuẩn, ship nhanh</title>
     <link rel="shortcut icon" href="/Tiki.vn/Home/IMG/favicon/Favicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/style.css">
-    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/footer.css">
+    <link rel="stylesheet" href="/Tiki.vn/Home/CSS/header.css">
+    <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
     <link rel="stylesheet" href="/Tiki.vn/Home/fontawesome-free-6.6.0/css/all.min.css">
 </head>
 <body>
@@ -1421,19 +1422,19 @@
                                         <img class="img-choice-header img-for-you" src="/Tiki.vn/Home/IMG/img-recommend-today/img-header-recomed-today/danh-cho-ban.webp" alt="danh-cho-ban.webp">
                                         <div class="text-choice-header ">Dành cho bạn</div>
                                     </div>
-                                    <a onclick="teb_errol()" class="tab-choice tab-top-deal"  href="">
+                                    <a onclick="tab_errol()" class="tab-choice tab-top-deal"  href="">
                                         <img class="img-choice-header"  src="/Tiki.vn/Home/IMG/img-recommend-today/img-header-recomed-today/top-deal.webp" alt="top-deal.webp">
                                         <div class="text-choice-header">Top Deal</div>
                                     </a>
-                                    <a onclick="teb_errol()" class="tab-choice tab-freeship100k" href="">
+                                    <a onclick="tab_errol()" class="tab-choice tab-freeship100k" href="">
                                         <img class="img-choice-header"  src="/Tiki.vn/Home/IMG/img-recommend-today/img-header-recomed-today/freeship100k.webp" alt="freeship100k.webp">
                                         <div class="text-choice-header">Freeship 100k</div>
                                     </a>
-                                    <a onclick="teb_errol()" class="tab-choice tab-book-sale" href="">
+                                    <a onclick="tab_errol()" class="tab-choice tab-book-sale" href="">
                                         <img class="img-choice-header"  src="/Tiki.vn/Home/IMG/img-recommend-today/img-header-recomed-today/sach-xa-kho.webp" alt="sach-xa-kho.webp">
                                         <div class="text-choice-header">Sách Xả Kho - 60%</div>
                                     </a>
-                                    <a onclick="teb_errol()" class="tab-choice tab-household" href="">
+                                    <a onclick="tab_errol()" class="tab-choice tab-household" href="">
                                         <img class="img-choice-header"  class="img-choice-header"  src="/Tiki.vn/Home/IMG/img-recommend-today/img-header-recomed-today/gia-dung.webp" alt="gia-dung.webp">
                                         <div class="text-choice-header">Gia Dụng -50%</div>
                                     </a>
