--- a/Tiki.vn/Home/HTML/my_comment.html
+++ b/Tiki.vn/Home/HTML/my_comment.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="/Tiki.vn/Home/fontawesome-free-6.6.0/css/all.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/footer.css">
+    <link rel="stylesheet" href="/Tiki.vn/Home/CSS/header.css">
 </head>
 
 <body>
@@ -121,11 +122,11 @@
     <div class="container-ID-anno">
         <div class="ID-anno">
             <div class="left-anno">
-                <p class="address-anno">Trang chủ > Thông báo của tôi</p>
+                <p class="address-anno">Trang chủ > Nhận xét của tôi</p>
                 <div class="inf-anno">
                     <span><img class="avatar-anno" src="/Tiki.vn/Home/IMG/account/avatar.png" alt=""></span>
                 </div>
-                <div class="name-anno">Tài Khoản của <br> <strong>Thiện Linh</strong></div>
+                <div class="name-anno">Tài Khoản của <br> <strong>Bạn</strong></div>
                 <ul class="fa-ul">
                     <li class="tap-anno">
                         <span class="fa-li">
@@ -179,7 +180,7 @@
                     <br>
                     <li class="tap-anno">
                         <span class="fa-li">
-                            <a href="/Tiki.vn/Home/HTML/payment_information.html" class="info-icon-anno">
+                            <a href="" class="info-icon-anno">
                                 <span class="icon-color-anno"><i class="fa-regular fa-credit-card"></i>
                                     <div class="text-icon-anno">Thông tin thanh toán</div>
                                 </span>
@@ -199,7 +200,7 @@
                     <br>
                     <li class="tap-anno">
                         <span class="fa-li">
-                            <a href="" class="info-icon-anno">
+                            <a href="https://tiki.vn/danh-rieng-cho-ban" class="info-icon-anno">
                                 <span class="icon-color-anno"><i class="fa-regular fa-eye"></i></i>
                                     <div class="text-icon-anno">Sản phẩm bạn đã xem</div>
                                 </span>
@@ -229,7 +230,7 @@
                     <br>
                     <li class="tap-anno">
                         <span class="fa-li">
-                            <a href="" class="info-icon-anno">
+                            <a href="/Tiki.vn/Home/HTML/profitable_sharing.html" class="info-icon-anno">
                                 <span class="icon-color-anno"><img src="/Tiki.vn/Home/IMG/account/Chia_se_co_loi.svg"
                                         alt="">
                                     <div class="text-icon-anno">Chia sẻ có lời</div>
@@ -240,7 +241,7 @@
                     <br>
                     <li class="tap-anno">
                         <span class="fa-li">
-                            <a href="" class="info-icon-anno">
+                            <a href="https://tiki.vn/bao-hiem-so/hop-dong?source_screen=my_account" class="info-icon-anno">
                                 <span class="icon-color-anno"><img class="size-color-icon"
                                         src="/Tiki.vn/Home/IMG/account/insurance.png" alt="">
                                     <div class="text-icon-anno">Hợp đồng bảo hiểm</div>
@@ -251,7 +252,7 @@
                     <br>
                     <li class="tap-anno">
                         <span class="fa-li">
-                            <a href="" class="info-icon-anno">
+                            <a href="/Tiki.vn/Home/HTML/Voucher.html" class="info-icon-anno">
                                 <span class="icon-color-anno"><img src="/Tiki.vn/Home/IMG/account/coupon_code.svg" alt="">
                                     <div class="text-icon-anno">Mã giảm giá</div>
                                 </span>
@@ -261,7 +262,7 @@
                     <br>
                     <li class="tap-anno">
                         <span class="fa-li">
-                            <a href="" class="info-icon-anno">
+                            <a href="/Tiki.vn/Home/HTML/Astra.html" class="info-icon-anno">
                                 <span class="icon-color-anno"><img class="size-color-icon-anno"
                                         src="/Tiki.vn/Home/IMG/account/astra.png" alt=""></i>
                                     <div class="text-icon-anno">Astra của bạn</div>
@@ -272,7 +273,7 @@
                     <br>
                     <li class="tap-anno">
                         <span class="fa-li">
-                            <a href="" class="info-icon-anno">
+                            <a href="/Tiki.vn/Home/HTML/management-coin.html" class="info-icon-anno">
                                 <span class="icon-color-anno"><i class="fa-solid fa-coins"></i>
                                     <div class="text-icon-anno">Quản lý Tiki Xu của tôi</div>
                                 </span>
@@ -282,7 +283,7 @@
                     <br>
                     <li class="tap-anno">
                         <span class="fa-li">
-                            <a href="" class="info-icon-anno">
+                            <a href="/Tiki.vn/Home/HTML/book-care.html" class="info-icon-anno">
                                 <span class="icon-color-anno"><img class="size-color-icon-anno"
                                         src="/Tiki.vn/Home/IMG/account/bookcare.svg" alt=""></i>
                                     <div class="text-icon-anno">BookCare</div>
@@ -293,7 +294,7 @@
                     <br>
                     <li class="tap-anno">
                         <span class="fa-li">
-                            <a href="" class="info-icon-anno">
+                            <a href="/Tiki.vn/Home/HTML/support_center.html" class="info-icon-anno">
                                 <span class="icon-color-anno"><i class="fa-solid fa-headphones"></i></i>
                                     <div class="text-icon-anno">Hỗ trợ khách hàng</div>
                                 </span>
