--- a/Tiki.vn/Home/HTML/order_management.html
+++ b/Tiki.vn/Home/HTML/order_management.html
@@ -6,8 +6,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tiki - Mua hàng online giá tốt, hàng chuẩn, ship nhanh</title>
     <link rel="shortcut icon" href="/Tiki.vn/Home/IMG/favicon/Favicon.jpg" type="image/x-icon">
-    <link rel="stylesheet" href="/Tiki.vn/Home/CSS/style.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
+    <link rel="stylesheet" href="/Tiki.vn/Home/CSS/header.css">
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/footer.css">
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/order_management.css">
     <link rel="stylesheet" href="/Tiki.vn/Home/fontawesome-free-6.6.0/css/all.min.css">
@@ -142,18 +142,16 @@
     <div class="container-ID">
         <div class="ID">
             <div class="left">
-                <p class="address">Trang chủ > Thông báo của tôi</p>
+                <p class="address">Trang chủ > Quản lý đơn hàng</p>
                 <div class="inf">
                     <span><img class="avatar" src="/Tiki.vn/Home/IMG/account/avatar.png" alt=""></span>
                 </div>
-                <div class="name">Tài Khoản của <br> <strong>Thiện Linh</strong></div>
+                <div class="name">Tài Khoản của <br> <strong>Bạn</strong></div>
                 <ul class="fa-ul">
                     <li class="tap">
                         <span class="fa-li">
                             <a href="/Tiki.vn/Home/HTML/account.html" class="info-icon">
-                                <span class="icon-color"><i class="fa-solid fa-user "></i>
-                                    <div class="text-icon">Thông tin tài khoản</div>
-                                </span>
+                                <span class="icon-color"><i class="fa-solid fa-user "></i><div class="text-icon">Thông tin tài khoản</div></span>
                             </a>
                         </span>
                     </li>
@@ -161,19 +159,15 @@
                     <li class="tap">
                         <span class="fa-li">
                             <a href="/Tiki.vn/Home/HTML/my_announcement.html" class="info-icon">
-                                <span class="icon-color"><i class="fa-solid fa-bell"></i>
-                                    <div class="text-icon">Thông báo của tôi</div>
-                                </span>
+                                <span class="icon-color"><i class="fa-solid fa-bell"></i><div class="text-icon">Thông báo của tôi</div> </span>
                             </a>
                         </span>
                     </li>
-                    <br>
+                    <br >
                     <li class="tap">
                         <span class="fa-li">
                             <a href="/Tiki.vn/Home/HTML/order_management.html" class="info-icon">
-                                <span class="icon-color"><i class="fa-solid fa-book"></i>
-                                    <div class="text-icon">Quản lý đơn hàng</div>
-                                </span>
+                                <span class="icon-color"><i class="fa-solid fa-book"></i><div class="text-icon">Quản lý đơn hàng</div></span>
                             </a>
                         </span>
                     </li>
@@ -181,9 +175,7 @@
                     <li class="tap">
                         <span class="fa-li">
                             <a href="/Tiki.vn/Home/HTML/return_management.html" class="info-icon">
-                                <span class="icon-color"><i class="fa-solid fa-box"></i>
-                                    <div class="text-icon">Quản lý đổi trả</div>
-                                </span>
+                                <span class="icon-color"><i class="fa-solid fa-box"></i><div class="text-icon">Quản lý đổi trả</div></span>
                             </a>
                         </span>
                     </li>
@@ -191,9 +183,7 @@
                     <li class="tap">
                         <span class="fa-li">
                             <a href="/Tiki.vn/Home/HTML/address_book.html" class="info-icon">
-                                <span class="icon-color"><i class="fa-solid fa-location-dot"></i>
-                                    <div class="text-icon">Sổ địa chỉ</div>
-                                </span>
+                                <span class="icon-color"><i class="fa-solid fa-location-dot"></i><div class="text-icon">Sổ địa chỉ</div></span>
                             </a>
                         </span>
                     </li>
@@ -201,9 +191,7 @@
                     <li class="tap">
                         <span class="fa-li">
                             <a href="/Tiki.vn/Home/HTML/payment_information.html" class="info-icon">
-                                <span class="icon-color"><i class="fa-regular fa-credit-card"></i>
-                                    <div class="text-icon">Thông tin thanh toán</div>
-                                </span>
+                                <span class="icon-color"><i class="fa-regular fa-credit-card"></i><div class="text-icon">Thông tin thanh toán</div></span>
                             </a>
                         </span>
                     </li>
@@ -211,19 +199,15 @@
                     <li class="tap">
                         <span class="fa-li">
                             <a href="/Tiki.vn/Home/HTML/product_review.html" class="info-icon">
-                                <span class="icon-color"><i class="fa-solid fa-message"></i>
-                                    <div class="text-icon">Đánh giá sản phẩm</div>
-                                </span>
+                                <span class="icon-color"><i class="fa-solid fa-message"></i><div class="text-icon">Đánh giá sản phẩm</div></span>
                             </a>
                         </span>
                     </li>
                     <br>
                     <li class="tap">
                         <span class="fa-li">
-                            <a href="" class="info-icon">
-                                <span class="icon-color"><i class="fa-regular fa-eye"></i></i>
-                                    <div class="text-icon">Sản phẩm bạn đã xem</div>
-                                </span>
+                            <a href="https://tiki.vn/danh-rieng-cho-ban" class="info-icon">
+                                <span class="icon-color"><i class="fa-regular fa-eye"></i></i><div class="text-icon">Sản phẩm bạn đã xem</div></span>
                             </a>
                         </span>
                     </li>
@@ -231,9 +215,7 @@
                     <li class="tap">
                         <span class="fa-li">
                             <a href="/Tiki.vn/Home/HTML/favorite_list.html" class="info-icon">
-                                <span class="icon-color"><i class="fa-solid fa-heart"></i>
-                                    <div class="text-icon">Sản phẩm yêu thích</div>
-                                </span>
+                                <span class="icon-color"><i class="fa-solid fa-heart"></i><div class="text-icon">Sản phẩm yêu thích</div></span>
                             </a>
                         </span>
                     </li>
@@ -241,84 +223,63 @@
                     <li class="tap">
                         <span class="fa-li">
                             <a href="/Tiki.vn/Home/HTML/my_comment.html" class="info-icon">
-                                <span class="icon-color"><i class="fa-regular fa-star-half-stroke"></i>
-                                    <div class="text-icon">Nhận xét của tôi</div>
-                                </span>
+                                <span class="icon-color"><i class="fa-regular fa-star-half-stroke"></i><div class="text-icon">Nhận xét của tôi</div></span>
                             </a>
                         </span>
                     </li>
                     <br>
                     <li class="tap">
                         <span class="fa-li">
-                            <a href="" class="info-icon">
-                                <span class="icon-color"><img src="/Tiki.vn/Home/IMG/account/Chia_se_co_loi.svg"
-                                        alt="">
-                                    <div class="text-icon">Chia sẻ có lời</div>
-                                </span>
+                            <a href="/Tiki.vn/Home/HTML/profitable_sharing.html" class="info-icon">
+                                <span class="icon-color"><img  src="/Tiki.vn/Home/IMG/account/Chia_se_co_loi.svg" alt="" ><div class="text-icon">Chia sẻ có lời</div></span>
                             </a>
                         </span>
                     </li>
                     <br>
                     <li class="tap">
                         <span class="fa-li">
-                            <a href="" class="info-icon">
-                                <span class="icon-color"><img class="size-color-icon"
-                                        src="/Tiki.vn/Home/IMG/account/insurance.png" alt="">
-                                    <div class="text-icon">Hợp đồng bảo hiểm</div>
-                                </span>
+                            <a href="https://tiki.vn/bao-hiem-so/hop-dong?source_screen=my_account" class="info-icon">
+                                <span class="icon-color"><img class="size-color-icon" src="/Tiki.vn/Home/IMG/account/insurance.png" alt=""><div class="text-icon">Hợp đồng bảo hiểm</div></span>
                             </a>
                         </span>
                     </li>
                     <br>
                     <li class="tap">
                         <span class="fa-li">
-                            <a href="" class="info-icon">
-                                <span class="icon-color"><img src="/Tiki.vn/Home/IMG/account/coupon_code.svg"
-                                        alt="">
-                                    <div class="text-icon">Mã giảm giá</div>
-                                </span>
+                            <a href="/Tiki.vn/Home/HTML/Voucher.html" class="info-icon">
+                                <span class="icon-color"><img src="/Tiki.vn/Home/IMG/account/coupon_code.svg" alt=""><div class="text-icon">Mã giảm giá</div></span>
                             </a>
                         </span>
                     </li>
                     <br>
                     <li class="tap">
                         <span class="fa-li">
-                            <a href="" class="info-icon">
-                                <span class="icon-color"><img class="size-color-icon"
-                                        src="/Tiki.vn/Home/IMG/account/astra.png" alt=""></i>
-                                    <div class="text-icon">Astra của bạn</div>
-                                </span>
+                            <a href="/Tiki.vn/Home/HTML/Astra.html" class="info-icon">
+                                <span class="icon-color"><img class="size-color-icon" src="/Tiki.vn/Home/IMG/account/astra.png" alt=""></i><div class="text-icon">Astra của bạn</div></span>
                             </a>
                         </span>
                     </li>
                     <br>
                     <li class="tap">
                         <span class="fa-li">
-                            <a href="" class="info-icon">
-                                <span class="icon-color"><i class="fa-solid fa-coins"></i>
-                                    <div class="text-icon">Quản lý Tiki Xu của tôi</div>
-                                </span>
+                            <a href="/Tiki.vn/Home/HTML/management-coin.html" class="info-icon">
+                                <span class="icon-color"><i class="fa-solid fa-coins"></i><div class="text-icon">Quản lý Tiki Xu của tôi</div></span>
                             </a>
                         </span>
                     </li>
                     <br>
                     <li class="tap">
                         <span class="fa-li">
-                            <a href="" class="info-icon">
-                                <span class="icon-color"><img class="size-color-icon"
-                                        src="/Tiki.vn/Home/IMG/account/bookcare.svg" alt=""></i>
-                                    <div class="text-icon">BookCare</div>
-                                </span>
+                            <a href="/Tiki.vn/Home/HTML/book-care.html" class="info-icon">
+                                <span class="icon-color"><img class="size-color-icon" src="/Tiki.vn/Home/IMG/account/bookcare.svg" alt=""></i><div class="text-icon">BookCare</div></span>
                             </a>
                         </span>
                     </li>
                     <br>
                     <li class="tap">
                         <span class="fa-li">
-                            <a href="" class="info-icon">
-                                <span class="icon-color"><i class="fa-solid fa-headphones"></i></i>
-                                    <div class="text-icon">Hỗ trợ khách hàng</div>
-                                </span>
+                            <a href="/Tiki.vn/Home/HTML/support_center.html" class="info-icon">
+                                <span class="icon-color"><i class="fa-solid fa-headphones"></i></i><div class="text-icon">Hỗ trợ khách hàng</div></span>
                             </a>
                         </span>
                     </li>
