responsive cho trang chu va chinh sua webstie

--- a/Tiki.vn/Home/HTML/address_book.html
+++ b/Tiki.vn/Home/HTML/address_book.html
@@ -87,7 +87,7 @@
                             <img class="img-location" src="https://salt.tikicdn.com/ts/upload/88/5c/9d/f5ee506836792eb7775e527ef8350a44.png
                             " alt="">
                             <span class="text-location"> Giao đến: </span>
-                            <div class="address"><a class="link-address" href="http://">Q. 1.P. Bến Nghé, Hồ Chí Minh</a></div>
+                            <div class="address"><a class="link-address" href="">Q. 1.P. Bến Nghé, Hồ Chí Minh</a></div>
                         </div>
                     </div>
                 </div>
@@ -213,7 +213,7 @@
                     <br>
                     <li class="tap">
                         <span class="fa-li">
-                            <a href="/Tiki.vn/Home/HTML/profitable_sharing.html" class="info-icon">
+                            <a href="/Tiki.vn/Home/HTML/sharing-benefit.html" class="info-icon">
                                 <span class="icon-color"><img  src="/Tiki.vn/Home/IMG/account/Chia_se_co_loi.svg" alt="" ><div class="text-icon">Chia sẻ có lời</div></span>
                             </a>
                         </span>
