bo sung cac muc con thieu va sua loi

--- a/Tiki.vn/Home/HTML/Astra.html
+++ b/Tiki.vn/Home/HTML/Astra.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Tài khoản Astra | Tiki.vn</title>
+    <title>Tài khoản Astra | Tiki</title>
     <link rel="shortcut icon" href="/Tiki.vn/Home/IMG/favicon/Favicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/header.css">
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/footer.css">
