--- a/Tiki.vn/Home/HTML/management-coin.html
+++ b/Tiki.vn/Home/HTML/management-coin.html
@@ -6,6 +6,7 @@
     <title>Quản lý Tiki Xu</title>
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/header.css">
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/footer.css">
+    <link rel="shortcut icon" href="/Tiki.vn/Home/IMG/favicon/Favicon.jpg" type="image/x-icon">
     <link rel="stylesheet" href="/Tiki.vn/Home/CSS/management-coin.css">
     <link rel="stylesheet" href="/Tiki.vn/Home/fontawesome-free-6.6.0/css/all.min.css">
     <link href='https://unpkg.com/boxicons@2.1.4/css/boxicons.min.css' rel='stylesheet'>
@@ -282,33 +283,8 @@
                 </ul>
             </div>
             <div class="right">
-                <div class="header-coin">
-                    <span>Quản lý Tiki XU của tôi</span>
-                </div>
-                <div class="coin-in-pay">
-                    <span>Số Xu trong tài khoản</span><img src="/Tiki.vn/Home/IMG/img-management-coin/xu-icon.svg" alt=""><span>0</span>
-                    <div class="question">
-                        <span>Tiki Xu la gì?</span><img src="/Tiki.vn/Home/IMG/img-management-coin/question-mark.svg" alt="">
-                    </div>
-                </div>
-                <div class="pay-coin">
-                    <div class="input-coin">
-                        <div class="header-input">
-                            <span>Nhập số Xu muốn nạp </span> <img src="/Tiki.vn/Home/IMG/img-management-coin/live-area.svg" alt="">
-                        </div>
-                        <img src="/Tiki.vn/Home/IMG/img-management-coin/xu-icon.svg" alt=""><input type="number" value="0">
-                    </div>
-                    <div class="list-button">
-                        <button>100.000</button>
-                        <button>200.000</button>
-                        <button>500.000</button>
-                        <button>1.000.000</button>
-                        <button>2.000.000</button>
-                    </div>
-                </div>
-                <div class="proceed-pay">
-                    
-                </div>
+                <img src="/Tiki.vn/Home/IMG/img-management-coin/404.png" alt="">
+                <p>Trang web này đang trong quá trình hoàn thành. Vui lòng quay lại sau! Cảm ơn quý khách!</p>
             </div>
         </div>
     
