--- a/Tiki.vn/Home/HTML/my_comment.html
+++ b/Tiki.vn/Home/HTML/my_comment.html
@@ -59,7 +59,7 @@
                                     <a class="text-list-shorcut" href="/Tiki.vn/Home/HTML/support_center.html" href=""><span>Thông tin hỗ trợ</span><br></a>
                                 </div>
                                 <div class="list-option">
-                                    <a class="text-list-shorcut" href="" href=""><span>Đăng xuât</span><br></a>
+                                    <a class="text-list-shorcut" href="/Tiki.vn/Home/HTML/index.html" href=""><span>Đăng xuât</span><br></a>
                                 </div>
                             </div>
                         </div>
