--- a/Tiki.vn/Home/HTML/sharing-benefit.html
+++ b/Tiki.vn/Home/HTML/sharing-benefit.html
@@ -65,7 +65,7 @@
                                         href=""><span>Thông tin hỗ trợ</span><br></a>
                                 </div>
                                 <div class="list-option">
-                                    <a class="text-list-shorcut" href="" href=""><span>Đăng xuât</span><br></a>
+                                    <a class="text-list-shorcut" href="/Tiki.vn/Home/HTML/index.html" href=""><span>Đăng xuât</span><br></a>
                                 </div>
                             </div>
                         </div>
